# mysql-pinecone-etl-pipeline

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: check_records.py  comprehensive_fetch.py  comprehensive_result.txt  comprehensive_test.py  count_records.py  debug_pipeline.py  enhanced_test.py  fetch_pinecone.py  fix_pinecone_index.py  full_pipeline.py  main.py  raw_query.py  result.txt  schema.txt  test_db.py  test_embedding.py
src/pipeline/: config.py  database.py  extractor.py  loader.py  models.py  transformer.py
